--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Portfolio Web App of Ahsan Javed, who is a full stack we developer with expertise in LangChain and Generative AI."
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logoSN-title.png" />
     <!--
